@@ -30,7 +30,6 @@ my %SKIP_TESTS = (
 	'test06' => ($] >= 5.008) ? 0 : "needs perl >= 5.8",
 	'test15' => ($] <  5.008) ? 0 : "needs perl < 5.8",
 	'test16' => ($] >=  5.010) ? 0 : "needs perl >= 5.10",
-	'test30-fork' => ($^O ne 'cygwin') ? 0 : "test fails on Cygwin - missing fpurge",
 );
 
 my %opts = (
@@ -95,9 +94,6 @@ if($opts{v} ){
 	print "perl5lib: $perl5lib\n";
 	print "nytprofcvs: $nytprofcsv\n";
 }
-
-diag("Note: fpurge function not found, so fork test may fail")
-	unless Devel::NYTProf::HAS_FPURGE();
 
 ok(-x $nytprofcsv, "Where's nytprofcsv?");
 
